2011-02-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/include/powerpc-utility.h: Fixed LINKER_SYMBOL() for
	assembler compatibilty.  Added synchronization, cache, and alternate
	time base functions.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mpc55xx/include/mpc55xx.h:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mpc6xx/altivec/vec_sup.c, mpc6xx/mmu/bat.h:
	Fix up comments having been broken in previous commit.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* e500/mmu/mmu.c, mpc505/ictrl/ictrl.c, mpc505/timer/timer.c,
	mpc5xx/ictrl/ictrl.c, mpc5xx/timer/timer.c,
	mpc6xx/altivec/vec_sup.c, mpc6xx/clock/c_clock.c,
	mpc6xx/mmu/bat.c, mpc6xx/mmu/bat.h, mpc6xx/mmu/pte121.c,
	mpc8260/timer/timer.c, mpc8xx/timer/timer.c, new-exceptions/cpu.c,
	new-exceptions/bspsupport/ppc_exc_initialize.c,
	ppc403/clock/clock.c, ppc403/console/console.c,
	ppc403/console/console.c.polled, ppc403/console/console405.c,
	ppc403/irq/ictrl.c, ppc403/tty_drv/tty_drv.c,
	rtems/powerpc/cache.h, shared/include/powerpc-utility.h, shared/src/cache.c:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2011-01-31	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* new-exceptions/bspsupport/ppc_exc.S,
	new-exceptions/bspsupport/ppc_exc_asm_macros.h,
	new-exceptions/bspsupport/ppc_exc_naked.S,
	new-exceptions/bspsupport/ppc_exc_prologue.c: Branch targets are now
	global for all minimal prologues.  Generate branch instruction in
	minimal prologues.

2011-01-31	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* e500/mmu/mmu.c: Use common defines.

2011-01-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* mpc5xx/exceptions/raw_exception.c, mpc5xx/exceptions/raw_exception.h,
	mpc5xx/include/console.h, mpc5xx/include/mpc5xx.h, mpc5xx/irq/irq.c,